# task-management-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  initial_setup.py  main.py  pyproject.toml
migrations/: env.py
migrations/versions/: 3b1e2c9d7f40_create_users_table.py  5654cab09dc4_add_email_field_to_users_table.py  9066f19beb6f_added_created_at_field.py  c589e5628da2_create_tasks_table.py
src/app/: app.py  dependencies.py  security.py
src/app/config/: database.py  settings.py
src/app/db/: session.py
src/app/models/: tasks.py  user.py
src/app/repositories/: task_repository.py  user_repository.py
src/app/schemas/: task.py  user.py
src/app/services/: task_service.py  user_service.py
tests/: conftest.py  test_dependencies.py  test_task_repository.py  test_task_service.py
tests/integration/: test_tasks.py  test_users.py
